# FEMPlatform

./: README.en.md  README.md
FEMPlatform/: FEMPlatform.sln
FEMPlatform_Qt/: FEMBoundary.cpp  FEMBoundary.h  FEMCoil.cpp  FEMCoil.h  FEMCore.cpp  FEMCore.h  FEMDataType.h  FEMMaterial.cpp  FEMMaterial.h  FEMMovingPart.cpp  FEMMovingPart.h  FEMPlatform_Qt.pro  FEMPlatform_Qt.vcxproj  MatrixOutput.cpp  MatrixOutput.h  RelayDynamic.m  RelayDynamic_NDDR1650.m  RelayDynamic_NDDR2080Ti.m  RelayDynamic_NDDRtime.m  RelayDynamic_NR1.m  RelayDynamic_NRDebugtime.m  RelayDynamic_NRReleasetime.m  RelayDynamic_comsolNR.m  RelayDynamic_half.m  RelayDynamic_new.m  RelayDynamic_slowNR.m  (+1 more)
FEMPlatform_Qt/gmsh/: CMakeLists.txt  gmsh.pri
FEMPlatform_Qt/gmsh/Common/: CMakeLists.txt  GmshConfig.h
FEMPlatform_Qt/gmsh/Geo/: CMakeLists.txt  CellComplex.cpp
FEMPlatform_Qt/gmsh/Mesh/: CMakeLists.txt  Mesh.pri  meshGRegiontetgen.cpp  meshGRegiontetgen.h  tetgenBR.cxx
FEMPlatform_Qt/gmsh/Numeric/: CMakeLists.txt
FEMPlatform_Qt/gmsh/Parser/: CMakeLists.txt
FEMPlatform_Qt/gmsh/Post/: CMakeLists.txt
FEMPlatform_Qt/gmsh/contrib/: contrib.pri
FEMPlatform_Qt/gmsh/contrib/Netgen/: Netgen.pri  nglib_gmsh.cpp
FEMPlatform_Qt/gmsh/contrib/Netgen/libsrc/general/: general.pri
FEMPlatform_Qt/gmsh/contrib/Netgen/libsrc/gprim/: gprim.pri
FEMPlatform_Qt/gmsh/contrib/Netgen/libsrc/include/: include.pri
FEMPlatform_Qt/gmsh/contrib/Netgen/libsrc/linalg/: linalg.pri
FEMPlatform_Qt/gmsh/contrib/Netgen/libsrc/meshing/: meshing.pri  meshtype.cpp
FEMPlatform_Qt/gmsh/contrib/tetgen/: tetgen.pri
(+178 files in other folders)
